--- a/Python/003 解决阴影问题.md
+++ b/Python/003 解决阴影问题.md
@@ -1,1 +1,8 @@
 # 巧用数学解决阴影问题
+
+初学圆形的时候，通常我们都会遇到和圆的面积有关的问题。
+
+如下图，它外接了一个长度为10cm的正方形，求在正方形的内部并且在圆的外部的区域为阴影的面积。
+
+![image-20210715232956716](img\image-20210715232956716.png)
+
