--- a/Python/003 解决阴影问题.md
+++ b/Python/003 解决阴影问题.md
@@ -6,3 +6,7 @@
 
 ![image-20210715232956716](img\image-20210715232956716.png)
 
+对于阴影部分面积，按照做数学题的逻辑，我们会先分别计算出圆的面积和正方形的面积，再用正方形的面积减去圆的面积即可。
+
+计算过程用数学步骤可以写成：
+
