--- a/Python/003 解决阴影问题.md
+++ b/Python/003 解决阴影问题.md
@@ -10,3 +10,23 @@
 
 计算过程用数学步骤可以写成：
 
+$ S_1 = \pi R^2 = 25 \pi \approx 78.5(cm^2)$
+
+$ S_2 = 10 \times 10 = 100(cm^2) $
+
+$ S = S_2 - S_1 = 100 - 78.5 = 21.5(cm^2) $
+
+我们设定圆周率如上面计算中为$\pi=3.14$，在Python中，使用float()浮点函数来创建这样的数就叫浮点数。
+
+使用Python语句在IDLE中直接运行，如下：
+
+```python
+>>> R = 5
+>>> L = 10
+>>> S = L ** 2 - 3.14 * (R ** 2)
+>>> print(S)
+21.5
+>>> 
+```
+
+如果想使用更加精确的$\pi$，我们可以尝试导入math模块。
