--- a/Python/003 解决阴影问题.md
+++ b/Python/003 解决阴影问题.md
@@ -30,3 +30,25 @@ $ S = S_2 - S_1 = 100 - 78.5 = 21.5(cm^2) $
 ```
 
 如果想使用更加精确的$\pi$，我们可以尝试导入math模块。
+
+可以在IDLE中直接导入
+
+```python
+>>> import math
+>>> math.pi
+3.11592653589793
+>>>
+```
+
+这样可以更加精确的使用$\pi$：
+
+```python
+>>> import math
+>>> R = 5
+>>> L = 10
+>>> S = L ** 2 - math.pi * (R ** 2)
+>>> print(S)
+21.46018366025517
+>>> 
+```
+
