--- a/Python/003 解决阴影问题.md
+++ b/Python/003 解决阴影问题.md
@@ -4,7 +4,7 @@
 
 如下图，它外接了一个长度为10cm的正方形，求在正方形的内部并且在圆的外部的区域为阴影的面积。
 
-![image-20210715232956716](img\image-20210715232956716.png)
+![image-20210715232956716](img/image-20210715232956716.png)
 
 对于阴影部分面积，按照做数学题的逻辑，我们会先分别计算出圆的面积和正方形的面积，再用正方形的面积减去圆的面积即可。
 
