--- a/005 奇数偶数的个数.md
+++ b/005 奇数偶数的个数.md
@@ -1,6 +1,8 @@
 # 奇数和偶数
 
-数学中，偶数是指能被2整除的整数，用Python来表示就是`n//2==0`；奇数是指不能被2整除的整数，同样，用Python来表示就是`n//2!=0`。
+数学中，偶数是指能被2整除的整数，用Python来表示就是`n%2==0`；奇数是指不能被2整除的整数，同样，用Python来表示就是`n%2!=0`。
 
-基于这个概念，本例中我们使用循环的方式来求1～100以内的奇数和偶数各有多少个，以及计算1～100以内的奇数和偶数的和分别是多少。
+基于这个概念，本例中我们使用循环的方式
+1. 来求1～100以内的奇数和偶数各有多少个，
+2. 以及计算1～100以内的奇数和偶数的和分别是多少。
 
