--- a/English-TOEFL/Reading/海洋文化.md
+++ b/English-TOEFL/Reading/海洋文化.md
@@ -1,12 +1,12 @@
 # 阅读：海洋文化
 
-The Native American peoples of the north Pacific Coast created a highly complex maritime culture as they invented modes of production unique to their special environment. In addition to their sophisticated technical culture, they also attained one of the most complex social organizations of any nonagricultural people in the world.
+The Native American peoples of the north Pacific Coast created a highly complex maritime culture as they invented modes of production **unique** to their special environment. In addition to their sophisticated technical culture, they also **attained** one of the most complex social organizations of any nonagricultural people in the world.
 
 In a division of labor similar to that of the hunting peoples in the interior and among foraging peoples throughout the world, the men did most of the fishing, and the women processed the catch.
 
-Women also specialized in the gathering of the abundant shellfish that lived closer to shore. They collected oysters, crabs, sea urchins, mussels, abalone, and clams, which they could gather while remaining close to their children. The maritime life harvested by the women not only provided food, but also supplied more of the raw materials for making tools than did fish gathered by the men. Of particular importance for the native tool kit before the introduction of metal was the wide knife made from the larger mussel shells, and a variety of cutting edges that could be made from other marine shells.
+Women also specialized in the gathering of the **abundant** shellfish that lived closer to shore. They collected oysters, crabs, sea urchins, mussels, abalone, and clams, which they could gather while remaining close to their children. The maritime life harvested by the women not only provided food, but also supplied more of the raw materials for making tools than did fish gathered by the men. Of particular importance for the native tool kit before the introduction of metal was the wide knife made from the larger mussel shells, and a variety of cutting edges that could be made from other marine shells.
 
-The women used their tools to process all of the fish and marine mammals brought in by the men. They cleaned the fish, and dried vast quantities of them form the winter. They sun-dried fish when practical, but in the rainy climate of the coastal area they also used smokehouses to preserve tons of fish and other seafood annually. Each product hand its own peculiar characteristics that demanded a particular way of cutting or drying the me at, and each task required its own cutting blades and other utensils.
+The women used their tools to process all of the fish and marine mammals brought in by the men. **They** cleaned the fish, and dried vast quantities of them form the winter. They sun-dried fish when practical, but in the rainy climate of the coastal area they also used smokehouses to preserve tons of fish and other seafood annually. Each product hand its own **peculiar** characteristics that demanded a particular way of cutting or drying the me at, and each task required its own cutting blades and other utensils.
 
 After drying the fish, the women pounded some of them into fish meal, which was an easily transported food used in soups, stews, or other dishes to provide protein and thickening in the absence of fresh fish or while on long trips. The woman also made a cheese-like substance from a mixture of fish androe by aging it in storehouses or by burying it in wooden boxes or pits lined with rocks and tree leaves.
 
@@ -28,7 +28,7 @@ After drying the fish, the women pounded some of them into fish meal, which was 
 
    
 
-2. The word "unique" in line 2 is closest in meaning to
+2. The word "unique" in line 1 is closest in meaning to
 
    (A) comprehensible
 
@@ -40,7 +40,7 @@ After drying the fish, the women pounded some of them into fish meal, which was 
 
    
 
-3. The word "attained" in line 3 is closest in meaning to
+3. The word "attained" in line 2 is closest in meaning to
 
    (A) achieved
 
@@ -76,7 +76,7 @@ After drying the fish, the women pounded some of them into fish meal, which was 
 
 
 
-6. The world "abundant" in line 7 is closest in meaning to
+6. The world "abundant" in line 6 is closest in meaning to
 
    (A) prosperous
 
@@ -100,7 +100,7 @@ After drying the fish, the women pounded some of them into fish meal, which was 
 
 
 
-8. The word "They" in line 16 refers to
+8. The word "They" in line 10 refers to
 
    (A) women
 
@@ -124,7 +124,7 @@ After drying the fish, the women pounded some of them into fish meal, which was 
 
 
 
-10. The wore "peculiar" in line 19 is closest in meaning to
+10. The wore "peculiar" in line 12 is closest in meaning to
 
     (A) strange
 
